modifications version desktop

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="ana-talks">
             <div class="message">
               <p class="messagefriend">
-                >Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
             </div>
           </div>
